--- a/templates/email/contact1.html.twig
+++ b/templates/email/contact1.html.twig
@@ -4,8 +4,9 @@
 
     Bonjour Administrateur, <br><br>
     Vous venez de recevoir un mail de : <br>
-    <b>{{ mail }}</b>
+    
+    <b>{{ contact.email }}</b>
     <br><br>
-    {{ message }}
+       {{ contact.message }}
 
 {% endblock %}
