--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MemberController!{% endblock %}
+{% block title %}Membres{% endblock %}
 
 {% block body %}
 
