--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
         <meta name="keywords" content="keywords" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>{% block title %}Projet Ã©cologique{% endblock %}</title>
+        <title>{% block title %}Projet SL2Alice{% endblock %}</title>
 
         {% block stylesheets %}{% endblock %}
 
