--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -4,51 +4,87 @@
 
 {% block body %}
 
-        <div class="mb-4">
-            <a href="{{ path('blog') }}" class="small text-dark text-decoration-none">&#8592; Retour</a>
-        </div>    
-     
-     
-        <img src="{{ asset(article.imagePath) }}" alt="" class="w-50">
+ <main class="main">
+            <!-- promo start-->
+            <section class="promo-primary">
+                <picture>
+                    <source srcset="images/imagesite/whereareyou.jpg" media="(min-width: 992px)" /><img class="img--bg" src="images/imagesite/whereareyou.jpg" alt="img" />
+                </picture>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="align-container">
+                                <div class="align-container__item"><span class="promo-primary__pre-title"></span>
+                                    <h1 class="promo-primary__title"><span>Notre</span> <span>Blog autonome</span></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- promo end-->
+            <!-- blog start-->
+            <section class="section blog">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-xl-9">
+                            <div class="row">
+                               
+                                <div class="col-12">
+                                    
+                                   <div class="blog-post__img"><img class="img--bg" src="{{ asset(article.imagePath) }}" alt="blog" /></div>
 
-        <div class="mt-3">
-                <h1>{{ article.title }}</h1>
-                <div class="lead">Publié le {{ article.createdAt|date('d/m/Y') }} par {{ article.author }}</div>
-        </div>
+                                           <div class="blog-item__date">Publié le {{ article.createdAt|date('d/m/Y') }} par {{ article.author }}</div>
+                                           
+                                </div>
+                                        
+                                        <h3 class="blog-item__title"><a href="#">{{ article.title }}</a></h3>
 
-        <div class="my-4">{{ article.content|nl2br }}</div>
-              
-    <hr>
+                                        <div class="my-4">{{ article.content|nl2br }}</div>
+                                                                    
+                                                                            
+                                        <hr>
 
-    <div class="text-center">
-        <h2>Commentaires ({{ article.comments.count }})</h2>
-    </div>
+                                <div class="text-center">
 
-    {% for comment in article.comments %}
-        <div class="my-3"><b>Publié le {{ comment.createdAt|date('d/m/Y') }} par 
-        {{ comment.Pseudo }}</b>
-            <div>{{ comment.message|nl2br }}</div>
-        </div>
+                                    <h3 class="comments">Commentaires ({{ article.comments.count }})</h3>
+                                    
+                                </div>
 
-        <hr>
-    {% endfor %}
+                                {% for comment in article.comments %}
+                                    <div class="my-3">
+                                        <b>Publié le {{ comment.createdAt|date('d/m/Y') }} par {{ comment.pseudo }}</b>
+                                        <div>{{ comment.message|nl2br }}</div>
+                                    </div>
+                                    <hr>
+                                {% endfor %}
 
-    <div class="lead">Laissez nous un commentaire :</div>
-                           
-            {{ form_start(form) }}
+                                 <div class="lead">Laissez votre commentaire</div>
 
-            
-             <div class="mt-3">
-                {{ form_row(form.pseudo) }}
-            </div>
-            <div class="mt-3">
-                {{ form_row(form.message) }}
-            </div>
+                                        {{ form_start(form) }}
 
-            <div class="mt-3">
-                {{ form_widget(form.submit, { 'attr': {'class': 'btn btn-warning'} }) }}
-            </div>
+                                        
+                                        <div class="mt-3">
+                                            {{ form_row(form.pseudo) }}
+                                        </div>
+                                        <div class="mt-3">
+                                            {{ form_row(form.message) }}
+                                        </div>
 
-            {{ form_end(form) }}
+                                        <div class="mt-3">
+                                            {{ form_widget(form.submit, { 'attr': {'class': 'btn btn-warning'} }) }}
+                                        </div>
+                                                
+                                        {{ form_end(form) }}       
+
+                                                    
+                                
+                       
+            </section>
+            <!-- blog end-->
+            </main>
+
+
+        
         
 {% endblock %}
