--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -4,51 +4,28 @@
 
 {% block body %}
 
-<div class="text-center">
-<h1>Bienvenue sur le blog de l'association SL2Alice</h1>
-<div class="lead">Découvrez les secrets de la nature</div>
-</div>
 
-    {# <section class="articles">
-        {% for article in articles %}
-        <div class="container">
-                <h2>{{ article.title }}</h2>
-            <div class="metadata">Ecrit le {{ article.createdAt | ('d/m/Y')}} </div>
-            <div class="content">
-            <img src="{{ article.image }}" alt="">
-            {{ article.content |raw}}
-            <a href="{{ path('blog_article') }}" class="btn btn-secondary mb-2">Lire la suite</a>
-            </div>
-        </div>
-        {% endfor %}
-    </section> #}
-
-
-
-<div class="row mt-5">
-{% for article in articles %}
+    <div class="row mt-5">
+            {% for article in articles %}
             <div class="col-md-6 col-lg-4 mb-3">
                 <div class="card" style="width: 22rem; height: 30rem;">
                     <a href="{{ path('blog_article', {id: article.id}) }}">
-                        <div class="img-ratio" style="--ratio: 60%;">
-                            <div class="img">
-                                <img src="{{ asset(article.imagePath) }}" class="card-img-top w-100" style="width: 22rem; height: 15rem;" alt="card-image cap">
+                            <div class="img-ratio" style="--ratio: 60%;">
+                                <div class="img">
+                                    <img src="{{ asset(article.imagePath) }}" class="card-img-top w-100" style="width: 22rem; height: 15rem;" alt="card-image cap">
                             </div>
                         </div>
                     </a>
-                    <div class="card-body" style="width: 22rem; height: 15rem;">
-                        <h5 class="card-title">{{ article.title }}</h5>
-                        <p class="content">{{ article.contentEllipsis|raw }}</p>
-                        <a href="{{ path('blog_article', {id: article.id}) }}" class="btn btn-secondary mb-2">Lire la suite</a>
-                    </div>
+                        <div class="card-body" style="width: 22rem; height: 15rem;">
+                            <h5 class="card-title">{{ article.title }}</h5>
+                            <p class="content">{{ article.contentEllipsis|raw }}</p>
+                            <a href="{{ path('blog_article', {id: article.id}) }}" class="btn btn-secondary mb-2">Lire la suite</a>
+                        </div>
                 </div>
             </div>
          {% endfor %}
     </div>
 
-    <div class="navigation">
-        {{ knp_pagination_render(articles) }}
-    </div>
-
-
+    <div class="navigation">{{ knp_pagination_render(articles) }}</div>
+                                    
 {% endblock %}
