--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -85,6 +85,7 @@
 
             <script src="{{ asset('js/common.js') }}"></script>
             <script src="{{ asset('js/script.js') }}"></script>
+            <script src="https://kit.fontawesome.com/69b2e80e9a.js" crossorigin="anonymous"></script>
         </div>
         
     </body>
