--- a/templates/formation/panier.html.twig
+++ b/templates/formation/panier.html.twig
@@ -113,7 +113,8 @@
                                                 <li><span>TVA 20%:</span><span>{{(Total*20)/100}} €</span></li>
                                                 {# <li><span>Economies:</span><span>60 €</span></li> #}
                                                 <li><span>Total:</span><span>{{Total}} €</span></li>
-                                            </ul><a class="cart-totals__link button button--primary" href="shop-checkout.html">Valider votre commande</a>
+                                            </ul>
+                                            <a class="cart-totals__link button button--primary" href="{{path('checkout')}}">Valider votre commande</a>
                                         </div>
                                     </div>
 
