--- a/templates/formation/avis/form.html.twig
+++ b/templates/formation/avis/form.html.twig
@@ -3,19 +3,40 @@
 {% block title %} 
     Modifier
 {% endblock %}
+{% block stylesheets %}
+
+
+ {# Bootstrap #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <style>
+    
+
+    
+    .margin{
+        margin-top : 100px !important;
+    }
+    
+    
+    </style>
+
+{% endblock %}
+
 {# page qui permet à l'admine d'ajouter ou modifier une formation/un stage #}
 {% block body %}
 
+    <div class=" container margin">
+        <h1>Modifier </h1>    
     
-    <h1>Modifier </h1>    
-   
-     
+        
 
-    <a href="{{path('formation', { id: avis.formation.id}) }}"> <--Retour</a> <br> <br>
-    
+        <a href="{{path('formation', { id: avis.formation.id}) }}"> <--Retour</a> <br> <br>
+        
 
+        
+        {{form(form)}}
+    </div>
     
-    {{form(form)}}
 
     
 
