--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -3,13 +3,19 @@
 {% block title %}Membres{% endblock %}
 
 {% block body %}
+<div class='container'>
+<h1>Welcome chère memebre </h1>
 
-    <h1>Espace membre</h1>
+ <ul>
+    <li>
+        <a href="{{ path('membre_blog_list') }}">Gestion du blog</a>
+    </li>
 
-     <ul>
-        <li>
-            <a href="{{ path('membre_blog_list') }}">Gestion du blog</a>
-        </li>
-    </ul>
+    <li>
+        <a href="{{path("list_stages_formations")}}">Gestion des formations et des stages</a>
+    </li>
+ </ul>
 
+</div>
+    
 {% endblock %}
