--- a/templates/base/_header.html.twig
+++ b/templates/base/_header.html.twig
@@ -105,19 +105,27 @@
                     <ul class="main-menu">
                             <li class="main-menu__item  {{route_name == 'home' ? 'main-menu__item--active' }} "><a class="main-menu__link" href="{{path("home")}}"><span>Accueil</span></a>
 
-                            <li class="main-menu__item {{route_name == 'blog' ? 'main-menu__item--active' }}"><a class="main-menu__link" href="{{path("blog")}}"><span>Blog</span></a>
+                            <li class="main-menu__item {{ is_granted('ROLE_ADMIN') ? 'main-menu__item--has-child' }}  {{route_name == 'blog' ? 'main-menu__item--active' }}">
+                                
+                                <a class="main-menu__link" href="{{path("blog")}}"><span>Blog</span></a>
+
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <ul class="main-menu__sub-list sub-list--style-2">
+                                        <li><a href="{{ path('membre_blog_list') }} "><span>Gestion blog</span></a></li>
+                                    </ul>
+                                {% endif %}
                             </li>
 
                             <li class="main-menu__item 
                             {{ is_granted('ROLE_ADMIN') ? 'main-menu__item--has-child' }} 
                             {{route_name == 'list_stages_formations' ? 'main-menu__item--active' }}">
 
-                                <a class="main-menu__link " href="{{path("list_stages_formations")}}"><span>Stage et Formations</span>
+                                <a class="main-menu__link " href="{{path("list_stages_formations")}}"><span>Stage et Formation</span>
                                 </a>
                                 
                                 {% if is_granted('ROLE_ADMIN') %}
                                     <ul class="main-menu__sub-list sub-list--style-2">
-                                        <li><a href="{{path("admin_list_formations")}} "><span>Liste Admin</span></a></li>
+                                        <li><a href="{{path("admin_list_formations")}} "><span>Gestion formation et stage</span></a></li>
                                     </ul>
                                 {% endif %}
                                 
